It works in cmd

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                 <img src="linkedinimg.png">
             </a>
         </div>
+	
+	//For testing purposes
         <div class="button">    
             <button id="switchbtn">Switch Stylesheet</button>
             <script src="app.js"></script>
