--- a/index.html
+++ b/index.html
@@ -5,21 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joseph Dillard</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h1 class="calligraphy">Joseph Dillard</h1>
-    </div>
-    
-    <nav class="nav-bar">
-        <ul>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#qualifications">Qualifications</a></li>
-            <li><a href="#community">Community</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+    <h1>Joseph Dillard</h1>
+    <p>Welcome to my personal website! Here you can find information about me, my projects, and how to contact me.</p>\
+
+    <img src="IMG_2401.JPG" alt="Profile Picture" class="profile-pic"> 
 
     <script src="script.js"></script>
 </body>
