--- a/index.html
+++ b/index.html
@@ -7,11 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Joseph Dillard</h1>
-    <p>Welcome to my personal website! Here you can find information about me, my projects, and how to contact me.</p>\
+    <div class="intro-blob">
+        <h1>Joseph Dillard</h1>
+        <p>Welcome to my personal website! Here you can find information about me and how to contact me.</p>
+    </div>
 
-    <img src="IMG_2401.JPG" alt="Profile Picture" class="profile-pic"> 
-
+    <div class="profile-pic">
+        <img src="IMG_2401.JPG" alt="Profile Picture" class="profile-pic"> 
+    </div>
+    <div class = "content-section">
+        <div class="about-section">
+            <h2>About Me</h2>
+            <p>Howdy! My name is Joseph Dillard, and I’m a <strong>Senior Computer Science major</strong> at Texas A&M University with a <em>strong interest in cybersecurity, software development, and network security.</em> I’m passionate about building secure and efficient systems that balance innovation, usability, and ethical responsibility.
+            I currently serve as the Standards Officer for Gents TAMU. I’m also part of the Craig and Galen Brown Engineering Honors Program, the Aggie Coding Club, and the A&M Cybersecurity Club. These experiences have strengthened my technical, analytical, and leadership skills through collaboration, research, and real-world problem-solving.</p>
+        </div>
+        <div class="likes-section">
+            <h2>What I Like</h2>
+            <ul>
+                <li>Cybersecurity & digital forensics</li>
+                <li>Full-stack development</li>
+                <li>Music, fitness, and design</li>
+            </ul>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
