--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     </div>
 
     <div class="profile-pic">
-        <img src="IMG_2401.JPG" alt="Profile Picture" class="profile-pic"> 
+        <img src="IMG_2401.JPG" alt="Photo of Joseph Dillard" class="profile-img">
     </div>
+
     <div class = "content-section">
         <div class="about-section">
             <h2>About Me</h2>
             <p>Howdy! My name is Joseph Dillard, and I’m a <strong>Senior Computer Science major</strong> at Texas A&M University with a <em>strong interest in cybersecurity, software development, and network security.</em> I’m passionate about building secure and efficient systems that balance innovation, usability, and ethical responsibility.
-            I currently serve as the Standards Officer for Gents TAMU. I’m also part of the Craig and Galen Brown Engineering Honors Program, the Aggie Coding Club, and the A&M Cybersecurity Club. These experiences have strengthened my technical, analytical, and leadership skills through collaboration, research, and real-world problem-solving.</p>
+            I currently serve as the Standards Officer for <a href="https://www.gentstamu.com/">Gents TAMU</a>. I’m also part of the Craig and Galen Brown Engineering Honors Program, the Aggie Coding Club, and the A&M Cybersecurity Club. These experiences have strengthened my technical, analytical, and leadership skills through collaboration, research, and real-world problem-solving.</p>
         </div>
         <div class="likes-section">
             <h2>What I Like</h2>
@@ -28,6 +29,20 @@
                 <li>Full-stack development</li>
                 <li>Music, fitness, and design</li>
             </ul>
+        </div>
+        <div class="email-form">
+            <h2>If you'd like to connect please reach out via email</h2>
+
+            <form action="mailto:someone@example.com" method="post" enctype="text/plain">
+            Name:<br>
+            <input type="text" name="name"><br>
+            E-mail:<br>
+            <input type="text" name="mail"><br>
+            Comment:<br>
+            <input type="text" name="comment" size="50"><br><br>
+            <input type="submit" value="Send">
+            <input type="reset" value="Reset">
+            </form>
         </div>
     </div>
     <script src="script.js"></script>
