added accessibility changes

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 <li>Music, fitness, and design</li>
             </ul>
         </div>
+        <div class="accessibility">
+            <h2>Accessibility Interests</h2>
+            <p>I'm passionate about accessibility in the world of gaming, cybersecurity, and for those who have been injured/are suffering setbacks. I've been
+                involved in a lot of injuries and setbacks in my life, and I know how hard it can be to find resources to help you get back on your feet. I'm interested in finding ways to make the world more accessible for everyone, regardless of their abilities or circumstances.
+            </p>
+        </div>
         <div class="email-form">
             <h2>If you'd like to connect please reach out via email</h2>
 
