non-decorative photo

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                 involved in a lot of injuries and setbacks in my life, and I know how hard it can be to find resources to help you get back on your feet. I'm interested in finding ways to make the world more accessible for everyone, regardless of their abilities or circumstances.
             </p>
         </div>
+        <div class="profile-pic">
+            <img src="injury.jpg" alt="Photo of knee injury" class="profile-img">
+        </div>
         <div class="email-form">
             <h2>If you'd like to connect please reach out via email</h2>
 
