--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="accessibility">
             <h2>Accessibility Interests</h2>
             <p>I'm passionate about accessibility in the world of gaming, cybersecurity, and for those who have been injured/are suffering setbacks. I've been
-                involved in a lot of injuries and setbacks in my life, and I know how hard it can be to find resources to help you get back on your feet. I'm interested in finding ways to make the world more accessible for everyone, regardless of their abilities or circumstances.
+                involved in a lot of injuries and setbacks in my life, and I know how hard it can be to find resources to help you get back on your feet. I'm interested in finding ways to make the world more accessible for everyone.
             </p>
         </div>
         <div class="profile-pic">
